--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 </p>
 
                 <div
-                  class="flex flex-col sm:flex-row sm:items-center gap-1 text-sm text-muted-foreground"
+                  class="flex items-center gap-1 text-sm text-muted-foreground"
                 >
                   <div class="flex items-center gap-2">
                     <div
